group underline and title and change column to bootstrap columns

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -67,21 +67,21 @@
     <div class="topbar">
         <div class="container">
             <div class="row">
-                <div class="col1">
+                <div class="col-12 col-sm-6">
                     <img src="../assets/img/netic/colors.png" class="topbar-img">
                 </div>
-                <div class="col2">
+                <div class="col-12 col-sm-6">
                     <h1 id="proj-title">netic health</h1>
                     <h5>designing a better experience for physical therapy patients.</h5>
                     <hr id="topbar-hr">
                     <div class="row">
-                        <div class="col1">
+                        <div class="col-12 col-sm-6">
                             <h4 id="proj-details">Duration</h4>
                             <h4 id="proj-details">Focus</h4>
                             <h4 id="proj-details">Tools</h4>
                             <h4 id="proj-details">Partner</h4>
                         </div>
-                        <div class="col2">
+                        <div class="col-12 col-sm-6">
                             <h6 id="proj-answers">Feb 2020 - May 2020</h6>
                             <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
                             <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
@@ -102,13 +102,16 @@
             complete their exercises. Additionally, we were tasked to create branding and further develop the ML basis for measuring
             the activity of the user.
             </p>
-
-            <h3>Our partner</h3>
-            <div id=underline1></div>
+            <div class="sectionheader">
+                <h3>Our partner</h3>
+                <div id=underline1></div>
+            </div>
             <p>We partnered with Netic Health, a Berkeley-based startup. Netic aims to provide physical therapy and rehabilitation to
             anyone through a smartphone.</p>
-            <h3>The problem</h3>
-            <div id=underline2></div>
+            <div class="sectionheader">
+                <h3>The problem</h3>
+                <div id=underline2></div>
+            </div>
             <p>Current physcial therapy patients oftentimes do not finish their workouts. They need a tool that will help them track
             their progress, chat with professionals, guide them through exercises, and motivate them to continue therapy.</p>
 
@@ -122,11 +125,13 @@
             </div>
 
         <div class="row">
-            <div class="col1">
+            <div class="col-12 col-sm-6">
                 <div class="container">
-                    <h3>Deliverable 1</h3>
-                    <div id=underline5></div>
-                    <h7 id="how">How might we design branding that portrays a path to recovery?</h7>
+                    <div class="sectionheader">
+                        <h3>Deliverable 1 More Text <span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                        <div id=underline5></div>
+                    </div>
+                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we design branding that portrays a path to recovery?</h7>
                     <div class="container">
                         <p id="d1p1">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
                         patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
@@ -136,17 +141,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col2">
+            <div class="col-12 col-sm-6">
                 <img src="../assets/img/netic/colors.png" class="topbar-img">
             </div>
-        </div>
-        <div class="row">
-            <div class="col1">
+        <!-- </div>
+        <div class="row"> -->
+            <div class="col-12 col-sm-6">
                 <img src="../assets/img/netic/colors.png" class="topbar-img">
             </div>
-            <div class="col2">
-                <h3>Deliverable 2</h3>
-                <div id=underline6></div>
+            <div class="col-12 col-sm-6">
+                <div class="sectionheader">
+                    <h3>Deliverable 2<span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                    <div id=underline6></div>
+                </div>
                 <h7 id="how">How might we....</h7>
                 <div class="container">
                     <p id="d2p1">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
@@ -162,32 +169,42 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col1">
+        <!-- </div>
+        <div class="row"> -->
+            <div class="col-12 col-sm-6">
                 <div class="container">
-                    <h3>Deliverable 3</h3>
-                    <div id=underline7></div>
+                    <div class="sectionheader">
+                        <h3>Deliverable 3<span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                        <div id=underline7></div>
+                    </div>
                     <h7 id="how">How might we....</h7>
                     <div class="container">
                         <p>Hello</p>
                     </div>
                 </div>
             </div>
-            <div class="col2">
+            <div class="col-12 col-sm-6">
                 <img src="../assets/img/netic/colors.png" class="topbar-img">
             </div>
-        </div>
-        <div class="row">
-            <div class="col1">
+        <!-- </div>
+        <div class="row"> -->
+            <div class="col-12 col-sm-6">
                 <img src="../assets/img/netic/colors.png" class="topbar-img">
             </div>
-            <div class="col2">
-                <h3>Deliverable 4</h3>
-                <div id=underline8></div>
+            <div class="col-12 col-sm-6">
+                <div class="sectionheader">
+                    <h3>Deliverable 4<span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                    <div id=underline8></div>
+                </div>
                 <h7 id="how">How might we....</h7>
                 <div class="container">
                     <p>Hello</p>
+                        <p id="d4p3">In the end, we were able to create a working Figma prototype that properly encompasses all the different aspects that
+                        were envisioned by Netic Health; including a new company logo, name and slogan, a mission statement, and a fully
+                        designed mobile application with features such as connecting to a PT, a way to track information, a "gamified" social
+                        connection, and a way for people to easily utilize the machine learning technology developed by the company.
+                        </p>
+    
                 </div>
             </div>
         </div>
