--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
   <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 </head>
 
@@ -74,14 +74,14 @@
                     <h1 id="proj-title">netic health</h1>
                     <h5>designing a better experience for physical therapy patients.</h5>
                     <hr id="topbar-hr">
-                    <div class="row">
-                        <div class="col-12 col-sm-6">
+                    <div class="row details">
+                        <div class="col-6">
                             <h4 id="proj-details">Duration</h4>
                             <h4 id="proj-details">Focus</h4>
                             <h4 id="proj-details">Tools</h4>
                             <h4 id="proj-details">Partner</h4>
                         </div>
-                        <div class="col-12 col-sm-6">
+                        <div class="col-6">
                             <h6 id="proj-answers">Feb 2020 - May 2020</h6>
                             <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
                             <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
