--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -63,19 +63,23 @@
         <!-- Background images -->
 
         <div class = "stars">
-            <img alt="stars" src="../assets/img//members/stars.png" class = "stars-img"/>
+            <img alt="stars" src="../assets/img/members/stars1.png" class = "stars-img-1"/>
+        </div>
+
+        <div class = "stars">
+            <img alt="stars" src="../assets/img/members/stars2.png" class = "stars-img-2"/>
         </div>
 
         <div class = "galaxy">
-            <img alt="galaxy" src="../assets/img//members/galaxy.png" class = "galaxy-img"/>
+            <img alt="galaxy" src="../assets/img/members/galaxy.png" class = "galaxy-img"/>
         </div>
 
         <div class = "helmet">
-            <img alt="helmet" src="../assets/img//members/helmet.png" class = "helmet-img-2"/>
+            <img alt="helmet" src="../assets/img/members/helmet.png" class = "helmet-img-2"/>
         </div>
 
         <div class = "helmet">
-            <img alt="helmet" src="../assets/img//members/helmet.png" class = "helmet-img-1"/>
+            <img alt="helmet" src="../assets/img/members/helmet.png" class = "helmet-img-1"/>
         </div>
 
         <!-- Header -->
