--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -74,19 +74,39 @@
                     <h1 id="proj-title">netic health</h1>
                     <h5>designing a better experience for physical therapy patients.</h5>
                     <hr id="topbar-hr">
+                    <div class="holder">
                     <div class="row details">
-                        <div class="col-6">
+                        <div class="col-4">
                             <h4 id="proj-details">Duration</h4>
+                        </div>
+                        <div class="col-8">
+                            <h6 id="proj-answers">Feb 2020 - May 2020</h6>
+                        </div>
+                    </div>
+                    <div class="row details">
+                        <div class="col-4">
                             <h4 id="proj-details">Focus</h4>
+                        </div>
+                        <div class="col-8">
+                            <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
+                        </div>
+                    </div>
+                    <div class="row details">
+                        <div class="col-4">
                             <h4 id="proj-details">Tools</h4>
+                        </div>
+                        <div class="col-8">
+                            <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
+                        </div>
+                    </div>
+                    <div class="row details">
+                        <div class="col-4">
                             <h4 id="proj-details">Partner</h4>
                         </div>
-                        <div class="col-6">
-                            <h6 id="proj-answers">Feb 2020 - May 2020</h6>
-                            <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
-                            <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
+                        <div class="col-8">
                             <h6 id="proj-answers">Netic Health</h6>
                         </div>
+                    </div>
                     </div>
                     <hr id="topbar-hr">
                 </div>
@@ -211,9 +231,6 @@
     </div>
 
    
-
-
-
 
 
 
