team and mentors sections on individual project page

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -116,18 +116,134 @@
     
     <div class="container">
 
-        <h2>Team</h2>
+        <h2 class = "team-header">Team</h2>
         <div class="container">
             <div class = "row">
-                <div class = "col-6 col-sm-3">
+                <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="bongi" src="../assets/img/members/bongi.png" class = "member"/>
-                            
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
                         </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
                     </div>
-                    <p class = "name"> Bongi Fleischer</p>
-                    <p class = "role"> Chief Executive Officer <br> ceo@icb.berkeley.edu</p>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h2>Mentors</h2>
+        <div class="container">
+            <div class = "row">
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>   
+                </div>
+                <div class = "col-4 col-sm-3 col-md-2">
+                    <div class="blob">
+                        <div class = "img-container">
+                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                        </div>
+                        </a>
+                        <h7>Kaylan Huang</h7>
+                        </a>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
+                    </div>   
                 </div>
             </div>
         </div>
