add users section

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -115,7 +115,22 @@
     </div>
     
     <div class="container">
-        
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <div class="sectionheader">
+                    <h3>Who is user?</h3>
+                    <div id=underline1></div>
+                </div>
+                <img src="../assets/img/users.svg" id="users">
+            </div>
+            <div class="col-12 col-sm-6">
+                <div class="sectionheader">
+                    <h3>Our users need...</h3>
+                    <div id=underline1></div>
+                </div>
+                <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>WOW this is cool</h7>
+        </div>
+        <hr>
         <h2>Background</h2>
         <div class="container">
             <p>Our challenge was to wireframe an app to allow patients to track their physical therapy all while incentivizing them to
