project section functionality on mainscroll

--- a/indexv15.html
+++ b/indexv15.html
@@ -116,7 +116,53 @@
 
     <!-- Featured Projects -->
     <section id="projects">
-        <img src="assets/img/mainscrollv15/project-section.svg" class="solar-system" alt="Exploring our recent projects.">
+        <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-sm-4 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
+                    </a>
+                    </div>
+                </div>    
+                <div class="col-6 col-sm-4 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
+                    </a>
+                    </div>
+                </div>  
+                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
+                    </a>
+                    </div>
+                </div>  
+                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
+                    </a>
+                    </div>
+                </div>  
+                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
+                    </a>
+                    </div>
+                </div>  
+                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
+                    <div style="padding-bottom: 10%;">
+                    <a href="v1.5/projects.html">
+                        <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
+                    </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
