--- a/indexv15.html
+++ b/indexv15.html
@@ -17,7 +17,7 @@
 
   <title>Invention Corps</title>
   <meta name="description" content="We are Invention Corps."/>
-  <link rel="icon" href="../icb-website/assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
   <!-- Custom Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600;1,700&display=swap" rel="stylesheet">
@@ -190,67 +190,6 @@
                 <h3><span class="landing-text-bkd">We are</span></h3>
                 <h1><span class="landing-text-bkd">Invention Corps</span></h1>
             </div>
-        </div>
-    </section> -->
-
-    <!-- Projects Section 
-    <section id="projects">
-        <div class="container">
-            <h2 id ="projects-header" class="jumptarget">Our Projects</h2> 
-            <div class="container">
-                <div class="row">
-                  <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 10%;">
-                    <a href="projects/alemany-farms.html">
-                        <img src="assets/img/projthumbnails/alemany farm 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
-                        <div class="proj-title">alemany farm</div>
-                    </a>
-                    </div>
-                  </div>
-                  <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 10%;">
-                    <a href="projects/communitycafe.html">
-                        <img src="assets/img/projthumbnails/community cafe 3x2.png" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">community cafe</div>
-                    </a>
-                    </div>
-                  </div>
-                  <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 10%;">
-                    <a href="projects/netic.html">
-                        <img src="assets/img/projthumbnails/neomotion 3x2.png" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">netic health</div>
-                    </a>
-                    </div>
-                  </div>
-                    <div class="col-6 col-sm-4">
-                        <div style="padding-bottom: 10%;">
-                        <a href="projects/berkeley-student-food-collective.html">
-                            <img src="assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
-                            alt="Berkeley Student Food Collective">
-                            <div class="proj-title">berkeley student food collective</div>
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4">
-                        <div style="padding-bottom: 10%;">
-                        <a href="projects/makerspace.html">
-                            <img src="assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                            <div class="proj-title">moffitt makerspace</div>
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4">
-                        <div style="padding-bottom: 10%;">
-                        <a href="projects/groupsource.html">
-                            <img src="assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                            <div class="proj-title">groupsource</div>
-                        </a>
-                        </div>
-                    </div>
-                </div>
-              </div>
-              </div>
         </div>
     </section> -->
 
