loading screen basis and js but let's see if it ruins everything else

--- a/indexv15.html
+++ b/indexv15.html
@@ -32,6 +32,9 @@
 
 <body>
 
+    <!-- Loading Page -->
+    <div id="load_screen"></div>
+
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container">
