--- a/indexv15.html
+++ b/indexv15.html
@@ -31,15 +31,14 @@
 </head>
 
 <body>
-
     <!-- Loading Page -->
     <div id="load_screen"></div>
-
+    
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container">
             <div class="d-flex flex-grow-1">
-                <a class="navbar-brand" href="#top">
+                <a class="navbar-brand" href="../indexv15.html">
                     <img src="assets/img/logo.svg" width="55" height="55" class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -65,7 +64,7 @@
     </nav>
 
     <!-- Landing Section -->
-    <section id="landing-container">
+    <!-- <section id="landing-container"> -->
         <div class="landing-container">
             <div class="container">
                 <div class="social-icons">
@@ -74,33 +73,25 @@
                     <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
-                <!-- <div class="container d-flex align-items-center justify-content-center">
-                    <div class="landing-text">
-                        <h3><span id="we-are-top" class="landing-text-top">We are</span></h3>
-                        <h3><span id="we-are-bottom" class="landing-text-top">We are</span></h3>
-                        <h1><span class="landing-text-bkd">Invention</span></h1>
-                        <h1><span class="landing-text-bkd">Corps</span></h1>
-                    </div>
-                </div> -->
             </div>
             <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2.png">
             <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/scroll-level-1.png">
             <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
             <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
         </div>
-    </section>
+    <!-- </section> -->
 
     <!-- About Section -->
-    <section id="about">
-        <div class="container">
+    <!-- <section id="about"> -->
+        <div class="container about">
             <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
-            <p class="container"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
         </div>
-    </section>
+    <!-- </section> -->
 
     <!-- Mission and Members -->
-    <section id="members">
-        <div class="container">
+    <!-- <section id="members"> -->
+        <div class="container members">
             <h2 id="members-title" class="d-flex align-items-center justify-content-center">Who are we?</h2>
             <p class="container"> Introducing the hearts and creative minds behind our work. </p>
         </div>
@@ -115,58 +106,46 @@
         <div class="button" id="about-button">
             <a href="v1.5/about.html">About</a>
         </div>
-    </section>
+    <!-- </section> -->
 
     <!-- Featured Projects -->
-    <section id="projects">
-        <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
-        <div class="container">
+    <!-- <section id="projects"> -->
+        <div class="container projects-div">
+            <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
             <div class="row">
-                <div class="col-6 col-sm-4 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
                     </a>
-                    </div>
                 </div>    
-                <div class="col-6 col-sm-4 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
                     </a>
-                    </div>
                 </div>  
-                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
                     </a>
-                    </div>
                 </div>  
-                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
                     </a>
-                    </div>
                 </div>  
-                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                     </a>
-                    </div>
                 </div>  
-                <div class="col-6 col-sm-3 col-md- col-lg-6 col-xl-6">
-                    <div style="padding-bottom: 10%;">
+                <div class="col-6">
                     <a href="v1.5/projects.html">
                         <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
                     </a>
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    <!-- </section> -->
 
     <!-- Footer -->
     <footer id="footer">
