--- a/indexv15.html
+++ b/indexv15.html
@@ -91,7 +91,7 @@
 
         <!-- Mission and Members -->
         <div class="members-section">
-            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png">
+            <!-- <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png"> -->
             <div class="container members">
                 <h2 id="members-title" class="d-flex d-flex justify-content-center  justify-content-center">Who are we?</h2>
                 <p class="container"> Introducing the hearts and creative minds behind our work. </p>
@@ -111,7 +111,7 @@
 
         <!-- Featured Projects -->
         <div class="projects-section">
-            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png">
+            <!-- <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png"> -->
             <div class="container projects-div">
                 <div class="img-container">
                     <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
