background images home page

--- a/indexv15.html
+++ b/indexv15.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="assets/css/mainscrollv15.css" type="text/css" />
 </head>
 
-<body>    
+<body> 
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container">
@@ -61,6 +61,13 @@
     </nav>
 
     <div class="main">
+        <!-- Background Images-->
+        <div class = "clouds">
+            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png">
+        </div>
+        <div class = "planets">
+            <img class="planets-img" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png">
+        </div>
         <!-- Landing Section -->
         <div class="landing">
             <div class="container">
@@ -91,7 +98,6 @@
 
         <!-- Mission and Members -->
         <div class="members-section">
-            <!-- <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png"> -->
             <div class="container members">
                 <h2 id="members-title" class="d-flex d-flex justify-content-center  justify-content-center">Who are we?</h2>
                 <p class="container"> Introducing the hearts and creative minds behind our work. </p>
@@ -111,7 +117,6 @@
 
         <!-- Featured Projects -->
         <div class="projects-section">
-            <!-- <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png"> -->
             <div class="container projects-div">
                 <div class="img-container">
                     <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
