mobile sizing home page

--- a/indexv15.html
+++ b/indexv15.html
@@ -61,13 +61,15 @@
     </nav>
 
     <div class="main">
+
         <!-- Background Images-->
         <div class = "clouds">
-            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png">
+            <img class="scene" data-modifier="25" src="assets/img/mainscrollv15/scroll-level-2b.png">
         </div>
         <div class = "planets">
-            <img class="planets-img" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png">
+            <img class="planets-img" data-modifier="25" src="assets/img/mainscrollv15/scroll-level-2c.png">
         </div>
+
         <!-- Landing Section -->
         <div class="landing">
             <div class="container">
@@ -87,12 +89,12 @@
 
         <!-- About Section -->
         <div class="about-section">
+            <div class="about-content container">
+                <h2 id ="about-header">Inventing ways to make a better world.</h2>
+                <p class="about-txt"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+            </div>
             <div class="about-img img-container">
                 <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/scroll-level-1.png">
-                <div class="about-content container">
-                    <h2 id ="about-header">Inventing ways to make a better world.</h2>
-                    <p class="about-txt"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
-                </div>
             </div>
         </div>
 
@@ -118,36 +120,40 @@
         <!-- Featured Projects -->
         <div class="projects-section">
             <div class="container projects-div">
-                <div class="img-container">
-                    <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
-                </div>
                 <div class="row">
-                    <div class="col-6 d-flex justify-content-center ">
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
                         </a>
-                    </div>    
-                    <div class="col-6 d-flex justify-content-center ">
+                    </div>
+                    <div class="col-4 d-flex justify-content-center">
+                        <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
+                    </div>     
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
                         </a>
                     </div>  
-                    <div class="col-6 d-flex justify-content-center ">
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
                         </a>
-                    </div>  
-                    <div class="col-6 d-flex justify-content-center ">
+                    </div>
+                    <div class="col-4 space">
+                    </div>
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
                         </a>
                     </div>  
-                    <div class="col-6 d-flex justify-content-center ">
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                         </a>
+                    </div>
+                    <div class="col-4 space">
                     </div>  
-                    <div class="col-6 d-flex justify-content-center ">
+                    <div class="col-4 d-flex justify-content-center ">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
                         </a>
@@ -175,14 +181,5 @@
     <script src="assets/js/basicScroll.min.js"></script>
     <!-- <script src="assets/js/members.js"></script> -->
 </body>
-
-   <!-- <section id="landing">
-        <div class="container d-flex d-flex justify-content-center  justify-content-center" id="landing-container">
-            <div class="landing-text">
-                <h3><span class="landing-text-bkd">We are</span></h3>
-                <h1><span class="landing-text-bkd">Invention Corps</span></h1>
-            </div>
-        </div>
-    </section> -->
 
 </html>
